# BitNet

./: .gitignore  .gitmodules  benchmark.md  convert_data.py  finetune.help.txt  main.py  pyproject.toml  run_training.py  run_unsloth.py
include/: bitnet-lut-kernels.h  kernel_config.ini
utils/: convert-helper-bitnet.py
